--- a/task4/docker-compose.yml
+++ b/task4/docker-compose.yml
@@ -1,20 +1,18 @@
-
 services:
-  back-end:
-
+  backend:
     build:
       context: ./back-end
       dockerfile: Dockerfile
-    image: softy-pinko-back-end:task4
+    image: backend
     ports:
       - "5252:5252"
 
-  front-end:
+  frontend:
     build:
       context: ./front-end
       dockerfile: Dockerfile
-    image: softy-pinko-front-end:task4
+    image: frontend
     ports:
       - "9000:9000"
     depends_on:
-      - back-end
+      - backend
